components/badge/src/vwc-badge.scss
$namespace: --vvd-badge;
$namespace-shape: #{$namespace}-shape;

@use '@vonage/vwc-icon/src/partials/vwc-icon-variables' as icon-variables;
@use '@vonage/vvd-typography/scss/typography' as typography;
@use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
	$connotations-set: primary cta success alert warning info,
	$shades: (soft, contrast),
	$default: primary,
);
@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
	$variable-name: #{$namespace-shape}
);
@use '@vonage/vvd-foundation/scss/mixins/layout/config' as layout-config with (
	$layout-set: filled outlined soft,
	$outline-duotone: true,
	$default: filled,
);
@use '@vonage/vvd-foundation/scss/mixins/layout' as layout;

$vvd-badge--block-size: #{$namespace}--block-size;


@include shape-mixins.shape(
	$shapes: (
		rounded: 4px,
		pill: 14px,
	)
);


:host(:not([dense]):not([enlarged])) {
	#{$vvd-badge--block-size}: 24px;
}

:host([dense]) {
	#{$vvd-badge--block-size}: 20px;
}

:host([enlarged]) {
	#{$vvd-badge--block-size}: 28px;
}

.vwc-badge {
	@include typography.typography-cat-shorthand('caption-bold');
	@include layout.layout;
	@include connotation.connotation;
	display: inline-flex;
	height: var(#{$vvd-badge--block-size});
	box-sizing: border-box;
	align-items: center;
	padding: 0 10px;
	border: 1px solid var(#{layout.$vvd-layout-color-outline});
	background-color: var(#{layout.$vvd-layout-color-fill});
	border-radius: var(#{$namespace-shape});
	color: var(#{layout.$vvd-layout-color-text});
	line-height: var(#{$vvd-badge--block-size});

	:host([dense]) & {
		padding: 0 8px;
	}

	:host([enlarged]) & {
		padding: 0 12px;
	}
}

.icon {
	$margin: 8px;
	block-size: 12px;
	line-height: 1;

	> vwc-icon {
		--icon-size: 12px;
		// TODO remove next line when VIV-704 resolved
		#{connotation.$vvd-color-connotation}: initial;
		vertical-align: top;
	}

	&.icon--leading {
		margin-inline-end: $margin;
	}
	&.icon--trailing {
		margin-inline-start: $margin;
	}
}

